# fuels-simulate-timestamp-repro

./: Cargo.toml  README.md  fuel-toolchain.toml
src/: main.sw
tests/: harness.rs
