[package]
name = "example"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[[test]]
harness = true
name = "example_tests"
path = "tests/harness.rs"

[dependencies]
fuels = { version = "0.65.1", features = ["fuel-core-lib"] }
rand = "0.8.5"
chrono = "0.4.38"
anyhow = "1.0.86"
tokio = { version = "1.12", features = ["full"] }
tai64 = { version = "4.0.0", default-features = false }
